test: 메모 기본 생성 테스트